re PR c/16999 (#ident stopped working)

2004-10-08  Andrew Pinski  <pinskia@physics.uc.edu>

        PR c/16999
        * c-ppoutput.c (cb_ident): Don't quote string as it is already
        quoted.

	* gcc.dg/cpp/ident-1.c: New test.

From-SVN: r88773